<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/bgDark"
    android:gravity="center_horizontal"
    android:paddingHorizontal="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate_your"
        android:textColor="@color/textWhite"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/age"
        android:textColor="@color/textWhite"
        android:paddingHorizontal="10dp"
        android:paddingVertical="3dp"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_minutes"
        android:textColor="@color/textWhite"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blueDark"
        android:textColor="@color/textWhite"
        android:text="@string/select_date"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginVertical="20dp"/>

    <TextView
        android:id="@+id/selectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/lightBlue"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_date"
        android:textColor="@color/grayFade"
        android:textSize="17sp"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/ageInMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/lightBlue"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_minutes_till_date"
        android:textColor="@color/grayFade"
        android:textSize="17sp"/>


</LinearLayout>